tests/snapshots/log_viewer__app__data__tests__comparisons_any-2.snap
---
source: src/app/data/tests.rs
expression: data
---
selected_row: ~
filter:
  search_key: "20"
  filter_on: Any
  is_case_sensitive: false
  comparator: LessThanEqual
rows:
  - data:
      otel.name: HTTP GET /status
      time: time value
  - data:
      http.status_code: 200
      otel.name: HTTP GET /status
      time: time value
filtered_rows: []
applied_filter:
  search_key: "20"
  filter_on: Any
  is_case_sensitive: false
  comparator: LessThanEqual
file_size_as_bytes: 0
