tests/snapshots/log_viewer__app__data__tests__comparisons_any-5.snap
---
source: src/app/data/tests.rs
expression: data
---
selected_row: ~
filter:
  search_key: "20"
  filter_on: Any
  is_case_sensitive: false
  comparator: GreaterThanEqual
rows:
  - data:
      otel.name: HTTP GET /status
      time: time value
  - data:
      http.status_code: 200
      otel.name: HTTP GET /status
      time: time value
filtered_rows:
  - 0
  - 1
applied_filter:
  search_key: "20"
  filter_on: Any
  is_case_sensitive: false
  comparator: GreaterThanEqual
