tests/snapshots/log_viewer__app__data__tests__comparisons_any.snap
---
source: src/app/data.rs
expression: data
---
selected_row: ~
filter:
  search_key: "20"
  filter_on: Any
  is_case_sensitive: false
  comparator: LessThan
rows:
  - data:
      otel.name: HTTP GET /status
      time: time value
  - data:
      http.status_code: 200
      otel.name: HTTP GET /status
      time: time value
filtered_rows: []
