tests/snapshots/log_viewer__app__data__tests__comparisons_specific_field-3.snap
---
source: src/app/data/tests.rs
expression: data
---
selected_row: ~
filter:
  search_key: "200"
  filter_on:
    Field:
      name: http.status_code
  is_case_sensitive: false
  comparator: Equal
rows:
  - data:
      otel.name: HTTP GET /status
      time: time value
  - data:
      http.status_code: 200
      otel.name: HTTP GET /status
      time: time value
filtered_rows:
  - 1
applied_filter:
  search_key: "200"
  filter_on:
    Field:
      name: http.status_code
  is_case_sensitive: false
  comparator: Equal
